--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,4 @@ jobs:
           command: |
             git config --global user.email "vinyl1225@gmail.com"
             git config --global user.name "Caleb Priest"
-            git add composer.lock
-            git push --force https://heroku:94616200-b199-4200-bf43-05a6baa694a0@git.heroku.com/simple-salary-program.git master
+            git push https://heroku:94616200-b199-4200-bf43-05a6baa694a0@git.heroku.com/simple-salary-program.git master
